# fk_tournament_planer

./: .env  .gitignore  .markdownlint-cli2.yaml  .prettierignore  .release-please-manifest.json  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  README_leptos_template.md  deny.toml  package-lock.json  package.json  release-please-config.json  wasm_error
.cargo/: config.toml
app/: CHANGELOG.md  Cargo.toml
app/src/: banner.rs  error.rs  global_state.rs  header.rs  layout.rs  lib.rs  postal_addresses.rs  sse.rs  tournament_tree_navigation.rs
app/src/components/: banner.rs  mod.rs  set_id_in_query_input_dropdown.rs
app/src/home/: dashboard.rs  mod.rs  select_sport.rs
app/src/home/sub_pages/: about_sport.rs  adhoc_tournament.rs  edit_tournament.rs  mod.rs  new_tournament.rs  sport_configurations.rs  tournaments.rs
app/src/hooks/: mod.rs  use_query_navigation.rs
app/src/postal_addresses/: copy_postal_addresses.rs  edit.rs  edit_postal_addresses.rs  list_postal_addresses.rs  mod.rs  search.rs  server_fn.rs  server_fn_test_support.rs
app/src/sport_config/: edit.rs  mod.rs  search.rs  select_sport.rs  server_fn.rs  server_fn_test_support.rs
app_core/: CHANGELOG.md  Cargo.toml
app_core/src/: entrant.rs  errors.rs  group.rs  lib.rs  match_.rs  postal_address.rs  round.rs  sport_config.rs  sport_plugin.rs  stage.rs  timing.rs  tournament.rs
app_core/src/ports/: client_registry.rs  database.rs  mod.rs  plugin_manager.rs  sport.rs
app_core/src/scoring/: entrant_group_score.rs  mod.rs  scoring_policy.rs  tie_breaker_policy.rs
app_core/src/tournament/: base.rs  editor.rs  mod.rs  stage.rs
app_core/src/utils/: id_version.rs  mod.rs  namespace.rs  normalize.rs  traits.rs  validation.rs
app_core/tests/postal_address_state/: db_wrapper_tests.rs  fakes.rs  main.rs  registry_wrapper_tests.rs
app_utils/: CHANGELOG.md  Cargo.toml
app_utils/src/: enum_utils.rs  error.rs  global_state.rs  lib.rs  params.rs
app_utils/src/components/: banner.rs  global_error_banner.rs  inputs.rs  mod.rs  set_id_in_query_input_dropdown.rs  toast.rs
app_utils/src/error/: mod.rs  strategy.rs
app_utils/src/global_state/: mod.rs  tournament_editor_state.rs
app_utils/src/hooks/: blur_active_element.rs  is_field_valid.rs  mod.rs  set_up_editor_form.rs  use_on_cancel.rs  use_query_navigation.rs  use_scroll_into_view.rs  use_url_navigation.rs
app_utils/src/server_fn/: mod.rs  postal_address.rs  sport_config.rs  stage.rs  tournament_base.rs  tournament_editor.rs
app_utils/src/server_fn/postal_address/: mod.rs  test_support.rs
app_utils/src/server_fn/sport_config/: mod.rs  test_support.rs
app_utils/src/server_fn/stage/: mod.rs  test_support.rs
app_utils/src/server_fn/tournament_base/: mod.rs  test_support.rs
app_utils/src/state/: activity_tracker.rs  error_state.rs  global_state.rs  mod.rs  object_table.rs  object_table_list.rs  postal_address.rs  postal_address_editor.rs  sport_config.rs  sport_config_editor.rs  toast_state.rs  tournament_editor.rs  tournament_editor_state.rs
app_utils/src/state/tournament/: base.rs  mod.rs  stage.rs
core/: Cargo.toml
core/src/: entrant.rs  group.rs  lib.rs  location.rs  match_.rs  orchestration.rs  schedule.rs  scoring.rs  stage.rs  timing.rs  tournament.rs
cr_leptos_axum_socket/: CHANGELOG.md  Cargo.toml
cr_leptos_axum_socket/src/: lib.rs
cr_mock/: Cargo.toml
cr_mock/src/: lib.rs
cr_single_instance/: CHANGELOG.md  Cargo.toml
cr_single_instance/src/: leptos_hook.rs  lib.rs  registry.rs  test_support.rs  types.rs  web_service.rs
cr_single_instance/src/registry/: test_support.rs
cr_single_instance/tests/: client_registry_adapter_basic.rs  client_registry_adapter_parallel.rs  client_registry_adapter_resilience.rs  client_registry_adapter_shutdown.rs
cr_single_instance/tests/common/: mod.rs
db_postgres/: CHANGELOG.md  Cargo.toml  diesel.toml
db_postgres/migrations/2025-10-01-094205-0000_postal_addresses/: down.sql  up.sql
db_postgres/migrations/2025-11-26-203859-0000_create_sport_config/: down.sql  up.sql
db_postgres/migrations/2026-01-09-152515-0000_tournament_base/: down.sql  up.sql
db_postgres/migrations/2026-01-18-161302-0000_stages/: down.sql  up.sql
db_postgres/migrations/2026-03-02-211609-0000_replace_num_groups_with_group_sizes/: down.sql  up.sql
db_postgres/src/: helpers.rs  lib.rs  postal_address.rs  schema.rs  sport_config.rs  stage.rs  test_support.rs  tournament_base.rs
db_postgres/tests/postal_address/: basis.rs  common.rs  concurrency.rs  main.rs
generic_sport_plugin/: CHANGELOG.md  Cargo.toml
generic_sport_plugin/src/: config.rs  lib.rs  sport_port.rs  sport_preview.rs  sport_web_ui.rs
integration_testing/: CHANGELOG.md  Cargo.toml  webdriver.json
integration_testing/src/: cr_single_instance_test_support.rs  lib.rs  port_fakes.rs
integration_testing/src/db_postgres_test_support/: common.rs  mod.rs  postal_address.rs  sport_config.rs  stage.rs  tournament_base.rs
integration_testing/src/port_fakes/: db_pa_fake.rs  db_sc_fake.rs  mod.rs  sport_fake.rs
integration_testing/tests/app/: banner.rs  common.rs  edit.rs  main.rs  search.rs  set_id_in_query_input_dropdown.rs
integration_testing/tests/app_core/: main.rs
integration_testing/tests/app_core_postal_address_state/: db_wrapper_tests.rs  main.rs  registry_wrapper_tests.rs
integration_testing/tests/app_postal_address/: banner.rs
integration_testing/tests/cr_leptos_axum_socket/: main.rs
integration_testing/tests/cr_single_instance/: client_registry_adapter_basic.rs  client_registry_adapter_parallel.rs  client_registry_adapter_resilience.rs  client_registry_adapter_shutdown.rs  main.rs
integration_testing/tests/db_postgres/: main.rs
integration_testing/tests/db_postgres_postal_address/: basis.rs  concurrency.rs  main.rs
server/: CHANGELOG.md  Cargo.toml
server/src/: fake_db.rs  main.rs  sse_service.rs
shared/: CHANGELOG.md  Cargo.toml
shared/src/: client.rs  client_and_server.rs  lib.rs  server.rs
sport_plugin_manager/: CHANGELOG.md  Cargo.toml
sport_plugin_manager/src/: lib.rs
src/: lib.rs
(+151 files in other folders)
