# using package only for version management
[package]
name = "fk_tournament_planer"
version = "0.1.0"
edition = "2021"
publish = false

[workspace]
resolver = "2"
members = [
    "app",
    "app_core",
    "cr_leptos_axum_socket",
    "cr_single_instance",
    "db_postgres",
    "frontend",
    "integration_testing",
    "server",
    "shared",
]

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1.89"
axum = "0.8.7"
axum-extra = { version = "0.12", features = ["routing", "typed-routing"] }
axum-macros = "0.5.0"
cfg-if = "1.0.4"
chrono = "0.4"
codee = "0.3"
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
dashmap = "6.1.0"
diesel = { version = "2.3", features = ["postgres", "extras"] }
diesel-async = { version = "0.7", features = ["postgres", "pool", "bb8", "migrations"] }
diesel-derive-enum = "2.1"
diesel_migrations = { version = "2.3", features = ["postgres"] }
displaydoc = "0.2"
dotenvy = "0.15"
futures-core = "0.3"
futures-util = "0.3"
getrandom = "0.3"
gloo-timers = { version = "0.3.0", features = ["futures"] }
http = "1.3.1"
leptos = { version = "0.8.12" }
#leptos-axum-socket = "0.4.1"
#leptos-axum-socket = { path = "../leptos-axum-socket" }
leptos-axum-socket = { git = "https://github.com/DrFlowerkick/leptos-axum-socket", branch = "refactor_context" }
#leptos-use = "0.16.3"
leptos-use = { git = "https://github.com/DrFlowerkick/leptos-use/", branch = "main" }
leptos_axum = { version = "0.8.6" }
leptos_meta = { version = "0.8.5" }
leptos_router = { version = "0.8.9" }
log = "0.4.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tower = { version = "0.5.2", features = ["full"] }
tower-http = { version = "0.6.6", features = ["full"] }
tracing = "0.1"
tracing-bunyan-formatter = "0.3"
tracing-error = "0.2"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5"
uuid = { version = "1.18.1", features = ["serde", "v4", "rng-getrandom"] }
wasm-bindgen = "=0.2.105"
wasm-bindgen-test = "0.3"
web-sys = "0.3"

# See https://github.com/leptos-rs/cargo-leptos for documentation of all the parameters.

# A leptos project defines which workspace members
# that are used together frontend (lib) & server (bin)
[[workspace.metadata.leptos]]
# this name is used for the wasm, js and css file names
name = "fk_tournament_planer"

# the package in the workspace that contains the server binary (binary crate)
bin-package = "server"

# the package in the workspace that contains the frontend wasm binary (library crate)
lib-package = "frontend"

# The site root folder is where cargo-leptos generate all output. WARNING: all content of this folder will be erased on a rebuild. Use it in your server setup.
site-root = "target/site"

# The site-root relative folder where all compiled output (JS, WASM and CSS) is written
# Defaults to pkg
site-pkg-dir = "pkg"

# [Optional] The source CSS file. If it ends with .sass or .scss then it will be compiled by dart-sass into CSS. The CSS is optimized by Lightning CSS before being written to <site-root>/<site-pkg>/app.css
tailwind-input-file = "style/input.css"

# Assets source dir. All files found here will be copied and synchronized to site-root.
# The assets-dir cannot have a sub directory with the same name/path as site-pkg-dir.
#
# Optional. Env: LEPTOS_ASSETS_DIR.
assets-dir = "public"

# The IP and port (ex: 127.0.0.1:3000) where the server serves the content. Use it in your server setup.
site-addr = "127.0.0.1:3000"

# The port to use for automatic reload monitoring
reload-port = 3001

# [Optional] Command to use when running end2end tests. It will run in the end2end dir.
#   [Windows] for non-WSL use "npx.cmd playwright test"
#   This binary name can be checked in Powershell with Get-Command npx
end2end-cmd = "./scripts/e2e-testing.sh"
end2end-dir = "end2end"

#  The browserlist query used for optimizing the CSS.
browserquery = "defaults"

# Set by cargo-leptos watch when building with that tool. Controls whether autoreload JS will be included in the head
watch = false

# The environment Leptos will run in, usually either "DEV" or "PROD"
env = "DEV"

# The features to use when compiling the bin target
#
# Optional. Can be over-ridden with the command line parameter --bin-features
bin-features = []

# If the --no-default-features flag should be used when compiling the bin target
#
# Optional. Defaults to false.
bin-default-features = false

# The features to use when compiling the lib target
#
# Optional. Can be over-ridden with the command line parameter --lib-features
lib-features = []

# If the --no-default-features flag should be used when compiling the lib target
#
# Optional. Defaults to false.
lib-default-features = false

# need to be applied only to wasm build
[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'
