[package]
name = "app"
version = "0.1.0"
edition = "2024"

[features]
default = []
hydrate = ["leptos/hydrate", "leptos-axum-socket/hydrate"]
ssr = [
    "leptos/ssr",
    "leptos-use/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "leptos-axum-socket/ssr",
    "dep:leptos_axum",
    "dep:tokio",
]

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { workspace = true, features = ["wasm_js"] }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app_core = { path = "../app_core" }
cfg-if.workspace = true
codee.workspace = true
db_postgres = { path = "../db_postgres", optional = true }
gloo-timers.workspace = true
http.workspace = true
leptos.workspace = true
leptos-use.workspace = true
leptos_axum = { workspace = true, optional = true }
leptos_meta.workspace = true
leptos_router.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
leptos-axum-socket.workspace = true
tokio = { workspace = true, optional = true }
