[package]
name = "app"
version = "0.4.0"
edition = "2024"
license = "MIT"

[features]
default = []
test-mock = []
hydrate = [
    "leptos/hydrate",
    "leptos-axum-socket/hydrate",
    "cr_leptos_axum_socket/hydrate",
    "cr_single_instance/hydrate",
    "uuid/js",
]
ssr = [
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "leptos-axum-socket/ssr",
    "dep:leptos_axum",
    "cr_single_instance/ssr",
    "cr_leptos_axum_socket/ssr",
]

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { workspace = true, features = ["wasm_js"] }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app_core = { path = "../app_core" }
cfg-if.workspace = true
cr_leptos_axum_socket = { path = "../cr_leptos_axum_socket" }
cr_single_instance = { path = "../cr_single_instance" }
db_postgres = { path = "../db_postgres", optional = true }
gloo-timers.workspace = true
http.workspace = true
isocountry.workspace = true
leptos.workspace = true
leptos-axum-socket.workspace = true
leptos_axum = { workspace = true, optional = true }
leptos_meta.workspace = true
leptos_router.workspace = true
reactive_stores.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
