[package]
name = "app_core"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
displaydoc.workspace = true
serde.workspace = true
thiserror.workspace = true
uuid.workspace = true

# only needed in tests
[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
