[package]
name = "app_core"
version = "0.1.0"
edition = "2024"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
displaydoc.workspace = true
serde.workspace = true
thiserror.workspace = true
uuid.workspace = true
