[package]
name = "app_utils"
version = "0.1.0"
edition = "2024"
license = "MIT"

[features]
default = []
hydrate = [
    "leptos/hydrate",
    "sport_plugin_manager/hydrate",
    "uuid/js",
]
ssr = [
    "leptos/ssr",
    "leptos_router/ssr",
    "sport_plugin_manager/ssr",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app_core = { path = "../app_core" }
gloo-timers.workspace = true
leptos.workspace = true
leptos_router.workspace = true
reactive_stores.workspace = true
sport_plugin_manager = { path = "../sport_plugin_manager" }
uuid.workspace = true
