[package]
name = "app_utils"
version = "0.9.0"
edition = "2024"
license = "MIT"

[features]
default = []
test-mock = []
hydrate = ["leptos/hydrate", "sport_plugin_manager/hydrate", "uuid/js"]
ssr = ["leptos/ssr", "leptos_router/ssr", "sport_plugin_manager/ssr"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app_core = { path = "../app_core" }
displaydoc.workspace = true
gloo-timers.workspace = true
http.workspace = true
leptos.workspace = true
leptos_router.workspace = true
petgraph.workspace = true
reactive_stores.workspace = true
serde.workspace = true
serde_json.workspace = true
sport_plugin_manager = { path = "../sport_plugin_manager" }
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
