[package]
name = "app_utils"
version = "0.12.0"
edition = "2024"
license = "MIT"

[features]
default = []
test-mock = []
hydrate = [
    "leptos/hydrate",
    "sport_plugin_manager/hydrate",
    "cr_leptos_axum_socket/hydrate",
    "uuid/js",
]
ssr = [
    "leptos/ssr",
    "leptos_router/ssr",
    "sport_plugin_manager/ssr",
    "cr_leptos_axum_socket/ssr",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app_core = { path = "../app_core" }
cr_leptos_axum_socket = { path = "../cr_leptos_axum_socket" }
displaydoc.workspace = true
gloo-timers.workspace = true
http.workspace = true
isocountry.workspace = true
leptos.workspace = true
leptos_router.workspace = true
petgraph.workspace = true
reactive_stores.workspace = true
serde.workspace = true
serde_json.workspace = true
sport_plugin_manager = { path = "../sport_plugin_manager" }
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
web-sys.workspace = true
