[package]
name = "core"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app = { path = "../app", default-features = false, features = ["ssr"] }

thiserror.workspace = true
log.workspace = true
time.workspace = true
uuid.workspace = true
ordered-float.workspace = true
rand.workspace = true
