[package]
name = "cr_mock"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app_core = { path = "../app_core" }
dotenvy.workspace = true
anyhow.workspace = true
uuid.workspace = true
async-trait.workspace = true
