[package]
name = "cr_single_instance"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
test_support = ["dep:tracing-subscriber"]
ssr = [
    "dep:axum",
    "dep:axum-extra",
    "dep:tokio",
    "dep:tokio-stream",
    "dep:shared",
]

[dependencies]
anyhow.workspace = true
app_core = { path = "../app_core" }
async-trait.workspace = true
axum = { workspace = true, optional = true }
axum-extra = { workspace = true, optional = true }
codee.workspace = true
dashmap.workspace = true
displaydoc.workspace = true
futures-core.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
shared = { path = "../shared", optional = true }
tokio = { workspace = true, optional = true }
tokio-stream = { workspace = true, optional = true }
tracing.workspace = true
tracing-subscriber = { workspace = true, optional = true }
uuid.workspace = true

[dev-dependencies]
tracing-subscriber.workspace = true
