[package]
name = "cr_single_instance"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
test_support = ["dep:tracing-subscriber"]
ssr = [
    "leptos/ssr",
    "leptos-use/ssr",
    "dep:tokio",
    "dep:tokio-stream",
]

[dependencies]
anyhow.workspace = true
app_core = { path = "../app_core" }
async-trait.workspace = true
codee.workspace = true
dashmap.workspace = true
displaydoc.workspace = true
futures-core.workspace = true
futures-util.workspace = true
leptos.workspace = true
leptos-use.workspace = true
serde.workspace = true
tokio = { workspace = true, optional = true }
tokio-stream = { workspace = true, optional = true }
tracing.workspace = true
tracing-subscriber = { workspace = true, optional = true }
uuid.workspace = true

[dev-dependencies]
tracing-subscriber.workspace = true
