[package]
name = "db_postgres"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app_core = { path = "../app_core" }
diesel.workspace = true
diesel-derive-enum.workspace = true
diesel-async.workspace = true
anyhow.workspace = true
uuid.workspace = true
async-trait.workspace = true
chrono.workspace = true
tracing.workspace = true
