[package]
name = "db_postgres"
version = "0.6.0"
edition = "2024"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
app_core = { path = "../app_core" }
async-trait.workspace = true
chrono.workspace = true
diesel.workspace = true
diesel-async.workspace = true
diesel_migrations.workspace = true
dotenvy = { workspace = true, optional = true }
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, optional = true }
url.workspace = true
uuid.workspace = true
