[package]
name = "generic_sport_plugin"
version = "0.4.0"
edition = "2024"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
hydrate = ["shared/hydrate", "leptos/hydrate"]
ssr = ["shared/ssr", "leptos/ssr"]

[dependencies]
anyhow.workspace = true
app_core = { path = "../app_core" }
leptos.workspace = true
serde.workspace = true
serde_json.workspace = true
shared = { path = "../shared" }
uuid.workspace = true
