[package]
name = "server"
version = "0.2.1"
edition = "2024"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
app = { path = "../app", default-features = false, features = ["ssr"] }
app_core = { path = "../app_core" }
axum.workspace = true
axum-extra.workspace = true
cr_leptos_axum_socket = { path = "../cr_leptos_axum_socket", features = ["ssr"] }
cr_single_instance = { path = "../cr_single_instance", features = ["ssr"] }
db_postgres = { path = "../db_postgres" }
dotenvy.workspace = true
futures-core.workspace = true
futures-util.workspace = true
generic_sport_plugin = { path = "../generic_sport_plugin" }
leptos = { workspace = true, features = [ "ssr" ] }
leptos-axum-socket = { workspace = true, features = [ "ssr" ] }
leptos_axum.workspace = true
serde.workspace = true
serde_json.workspace = true
shared = { path = "../shared" }
sport_plugin_manager = { path = "../sport_plugin_manager" }
tokio.workspace = true
tokio-stream.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-bunyan-formatter.workspace = true
tracing-error.workspace = true
tracing-log.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
