[package]
name = "shared"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app_core = { path = "../app_core" }
axum.workspace = true
axum-macros.workspace = true
cr_single_instance = { path = "../cr_single_instance", features = ["ssr"] }
leptos.workspace = true
leptos-axum-socket = { workspace = true, features = ["ssr"] }
