[package]
name = "shared"
version = "0.3.0"
edition = "2024"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app_core = { path = "../app_core" }
axum.workspace = true
axum-macros.workspace = true
leptos.workspace = true
leptos-axum-socket = { workspace = true, features = ["ssr"] }
