[package]
name = "sport_plugin_manager"
version = "0.3.0"
edition = "2024"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
app_core = { path = "../app_core" }
uuid.workspace = true

[dev-dependencies]
serde.workspace = true
serde_json.workspace = true
