[package]
name = "sport_plugin_manager"
version = "0.11.0"
edition = "2024"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
hydrate = ["shared/hydrate"]
ssr = ["shared/ssr"]

[dependencies]
anyhow.workspace = true
app_core = { path = "../app_core" }
shared = { path = "../shared" }
uuid.workspace = true

[dev-dependencies]
leptos.workspace = true
serde.workspace = true
serde_json.workspace = true
